2017-06-30  Andrew Pinski  <apinski@cavium.com>

	* tree-if-conv.c (predicate_scalar_phi): Update new_stmt if
	fold_stmt returned true.

2017-06-30  Nathan Sidwell  <nathan@acm.org>

	* ggc.h (empty_string): Delete.
	* cfgexpand.c (expand_asm_stmt): Use plain "".
	* optabs.c (expand_asm_memory_barrier): Likewise.
	* stringpool.c (empty_string): Delete.
	(digit_vector, digit_string): Delete.
	(ggc_alloc_string): Use plain "", don't optimize single digit
	strings.  Use ggc_alloc_atomic.

2017-06-30  Richard Earnshaw  <rearnsha@arm.com>

	* rtlanal.c (insn_rtx_cost): If a parallel contains exactly one
	comparison set and one other set, use the cost of the non-comparison
	set.

2017-06-30  Nathan Sidwell  <nathan@acm.org>

	* ggc.h: Replace all 'static inline' with plain 'inline'.  Fix
	some formatting.

2017-06-30  Peter Bergner  <bergner@vnet.ibm.com>

	* tree-cfg.c (group_case_labels_stmt): Merge scanning and compressing
	loops.  Remove now unneeded calls to gimple_switch_set_label() that
	just set removed labels to NULL_TREE.

2017-06-30  Aldy Hernandez  <aldyh@redhat.com>

	* tree-ssanames.c (set_range_info_raw): Abstract from ...
	(set_range_info): ...here.  Only call set_range_info_raw if domain
	is useful.
	(set_nonzero_bits): Call set_range_info_raw.
	* tree-ssanames.h (set_range_info_raw): New.

2017-06-30  Jakub Jelinek  <jakub@redhat.com>

	PR target/81225
	* config/i386/sse.md (vec_extract_lo_<mode><mask_name>): For V8FI,
	V16FI and VI8F_256 iterators, use <store_mask_predicate> instead
	of nonimmediate_operand and <store_mask_constraint> instead of m
	for the input operand.  For V8FI iterator, always split if input
	is a MEM.  For V16FI and V8SF_256 iterators, don't test if both
	operands are MEM if <mask_applied>.  For VI4F_256 iterator, use
	<store_mask_predicate> instead of register_operand and
	<store_mask_constraint> instead of v for the input operand.  Make
	sure both operands aren't MEMs for if not <mask_applied>.
